# drone-ws-target-tracking-rs

./: .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yaml
protocol/: Cargo.toml
protocol/src/: lib.rs
svckit/: Cargo.toml
svckit/src/: lib.rs
ws-client/: Cargo.toml  Dockerfile
ws-client/src/: main.rs
ws-server/: Cargo.toml  Dockerfile
ws-server/src/: main.rs
