[workspace]
resolver = "2"
members = [
    "svckit",
    "protocol",
    "ws-client",
    "ws-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Tomas <tomas@enginevector.com>"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.45", features = ["full"] }

# WebSocket
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"

# TLS
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2"
rustls-native-certs = "0.8"
webpki-roots = "0.26"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Async trait (still useful for dyn dispatch)
async-trait = "0.1"

# Local crates
svckit = { path = "svckit" }
protocol = { path = "protocol" }
