[package]
name = "protocol"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Binary protocol with bitfield headers and strategy-based dispatch"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
